# kiss_rss

./: Cargo.toml  README.md  buildargs.txt  kiss_rss.opml  tauri.conf.json
known_sources/: 0-news.opml  1-sports.opml  3-business.opml  4-technology.opml  5-gaming.opml
src/: lib.rs  main.rs  news.rs  serde.rs  sources.rs  subscriptions.rs
