[package]
name = "kiss_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = " 0.9.18"
roxmltree = "0.18.0"
dirs = "4.0.0"
chrono = "0.4.23"
dioxus = { version = "0.3.1", optional = true }
dioxus-desktop = { version = "0.3.0", optional = true }
url = { version = "2.3.1", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
tauri = { version = "1.2", optional = true, features = ["shell-open"] }


[features]
build-dioxus = ["dioxus", "dioxus-desktop"]
build-tauri = ["url", "serde_json", "serde", "tauri"]

# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
#default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[[bin]]         
name = "dioxus"    
required-features = ["build-dioxus"] 

[[bin]]         
name = "tauri"    
required-features = ["custom-protocol", "build-tauri"] 

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

