[package]
name = "kiss_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.11.14", features = ["blocking"] }
roxmltree = "0.18.0"
dirs = "4.0.0"
chrono = "0.4.23"
xml-builder = "0.5.1"
url = { version = "2.3.1", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
tauri = { version = "1.2", optional = true, features = ["shell-open"] }
scraper = { version = "0.14.0", optional = true}


[features]
build-tauri = ["url", "serde_json", "serde", "tauri", "scraper"]

# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
#default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[[bin]]         
name = "kiss_rss"    
required-features = ["custom-protocol", "build-tauri"] 

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

