[package]
name = "kiss_rss"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.11.15", features = ["blocking"] }
roxmltree = "0.18.0"
dirs = "4.0.0"
chrono = "0.4.23"
xml-builder = "0.5.1"
readable-readability = "0.4.0"
url = "2.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# url = { version = "2.3.1", optional = true }
tauri = { version = "1.2", optional = true, features = ["dialog-all", "http-all", "shell-open"] }
scraper = { version = "0.14.0", optional = true}


[features]
build-tauri = [
#    "url", 
#    "serde_json", 
#    "serde", 
    "tauri", 
    "scraper"
]

# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
#default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[[bin]]         
name = "kiss_rss"    
required-features = ["custom-protocol", "build-tauri"] 

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

